added new storage files img feature on upload and store functions, added new preview input form on edit and create pages

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,3 +12,15 @@ $fa-font-path: "../fonts/webfonts" !default;
 h1 {
     color: $text-color;
 }
+
+img {
+    width: 100%;
+}
+
+.img-box {
+    width: 800px;
+}
+
+.img-preview-box {
+    width: 200px;
+}
